--- a/domino-ui-demo/index.html
+++ b/domino-ui-demo/index.html
@@ -3,22 +3,22 @@
 <html>
 <head>
     <meta charset=UTF-8>
-    <link type="text/css" rel="stylesheet" href="/domino-ui/ui-demo.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/ui-demo.css">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
-    <link type="text/css" rel="stylesheet" href="/domino-ui/font/material-icons.css">
-    <link type="text/css" rel="stylesheet" href="/domino-ui/plugins/bootstrap/css/bootstrap.css">
-    <link type="text/css" rel="stylesheet" href="/domino-ui/plugins/node-waves/waves.css">
-    <link type="text/css" rel="stylesheet" href="/domino-ui/plugins/animate-css/animate.css">
-    <link type="text/css" rel="stylesheet" href="/domino-ui/plugins/waitme/waitMe.css">
-    <link type="text/css" rel="stylesheet" href="/domino-ui/plugins/bootstrap-select/css/bootstrap-select.css">
-    <link type="text/css" rel="stylesheet" href="/domino-ui/css/materialize.css">
-    <link type="text/css" rel="stylesheet" href="/domino-ui/css/style.css">
-    <link type="text/css" rel="stylesheet" href="/domino-ui/css/themes/all-themes.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/font/material-icons.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/plugins/bootstrap/css/bootstrap.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/plugins/node-waves/waves.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/plugins/animate-css/animate.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/plugins/waitme/waitMe.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/plugins/bootstrap-select/css/bootstrap-select.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/css/materialize.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/css/style.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/css/themes/all-themes.css">
 
     <title>Domino UI demo app</title>
 
-    <script src="/domino-ui/app.nocache.js"></script>
+    <script src="/domino-ui-demo/app.nocache.js"></script>
 </head>
 
 <body>
