add chat and footer resources

--- a/domino-ui-demo/index.html
+++ b/domino-ui-demo/index.html
@@ -20,6 +20,14 @@
     <title>Domino UI demo app</title>
 
     <script src="/domino-ui-demo/app.nocache.js"></script>
+
+    <script>
+        ((window.gitter = {}).chat = {}).options = {
+            room: 'domino-gwt/domino-ui'
+        };
+
+    </script>
+    <script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
 </head>
 
 <body>
