--- a/domino-ui-demo/index.html
+++ b/domino-ui-demo/index.html
@@ -3,23 +3,18 @@
 <html>
 <head>
     <meta charset=UTF-8>
-    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/ui-demo.css">
+    <link type="text/css" rel="stylesheet" href="/static/ui-demo.css">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
-    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/font/material-icons.css">
-    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/fontawesome/css/fontawesome-all.css">
-    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/plugins/bootstrap/css/bootstrap.css">
-    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/plugins/node-waves/waves.css">
-    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/plugins/animate-css/animate.css">
-    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/plugins/waitme/waitMe.css">
-    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/plugins/bootstrap-select/css/bootstrap-select.css">
-    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/css/materialize.css">
-    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/css/style.css">
-    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/css/themes/all-themes.css">
+    <link type="text/css" rel="stylesheet" href="/static/fontawesome/css/fontawesome-all.css">
+    <link type="text/css" rel="stylesheet" href="/static/css/domino-ui.css">
+    <link type="text/css" rel="stylesheet" href="/static/css/themes/all-themes.css">
+    <link type="text/css" rel="stylesheet" href="/static/dev.css">
+    <link type="text/css" rel="stylesheet" href="/static/materialize-stepper.css">
 
-    <title>Domino UI demo app</title>
+    <title>ui-demo</title>
 
-    <script src="/domino-ui-demo/app.nocache.js"></script>
+    <script src="/static/app.nocache.js"></script>
 
     <script>
         ((window.gitter = {}).chat = {}).options = {
@@ -41,5 +36,6 @@
         in order for this application to display correctly.
     </div>
 </noscript>
+
 </body>
 </html>
