--- a/domino-ui-demo/index.html
+++ b/domino-ui-demo/index.html
@@ -6,11 +6,11 @@
     <link type="text/css" rel="stylesheet" href="/static/ui-demo.css">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
-    <link type="text/css" rel="stylesheet" href="/static/fontawesome/css/fontawesome-all.css">
-    <link type="text/css" rel="stylesheet" href="/static/css/domino-ui.css">
-    <link type="text/css" rel="stylesheet" href="/static/css/themes/all-themes.css">
-    <link type="text/css" rel="stylesheet" href="/static/dev.css">
-    <link type="text/css" rel="stylesheet" href="/static/materialize-stepper.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/fontawesome/css/fontawesome-all.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/css/domino-ui.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/css/themes/all-themes.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/dev.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/materialize-stepper.css">
 
     <title>ui-demo</title>
 
