update index page

--- a/domino-ui-demo/index.html
+++ b/domino-ui-demo/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset=UTF-8>
-    <link type="text/css" rel="stylesheet" href="/static/ui-demo.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/ui-demo.css">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
     <link type="text/css" rel="stylesheet" href="/domino-ui-demo/fontawesome/css/fontawesome-all.css">
