update index page

--- a/domino-ui-demo/index.html
+++ b/domino-ui-demo/index.html
@@ -12,7 +12,7 @@
 
     <title>ui-demo</title>
 
-    <script src="/static/app.nocache.js"></script>
+    <script src="/domino-ui-demo/app.nocache.js"></script>
 
     <script>
         ((window.gitter = {}).chat = {}).options = {
