update paths and add ie11 polyfill

--- a/domino-ui-demo/index.html
+++ b/domino-ui-demo/index.html
@@ -3,27 +3,22 @@
 <html>
 <head>
     <meta charset=UTF-8>
-    <link type="text/css" rel="stylesheet" href="/static/ui-demo.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/ui-demo.css">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
-    <!--<link type="text/css" rel="stylesheet" href="/static/css/domino-ui.css">-->
-    <link type="text/css" rel="stylesheet" href="/static/fontawesome/css/fontawesome-all.css">
-    <link type="text/css" rel="stylesheet" href="/static/css/domino-ui.css">
-    <link type="text/css" rel="stylesheet" href="/static/css/themes/all-themes.css">
-    <link type="text/css" rel="stylesheet" href="/static/dev.css">
-    <!--<link href="https://gwtmaterialdesign.github.io/gwt-material-demo/gwtmaterialdemo/css/material-icons.css" rel="stylesheet">-->
-
+    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/fontawesome/css/fontawesome-all.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/css/domino-ui.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui-demo/css/themes/all-themes.css">
 
     <title>ui-demo</title>
 
-    <script src="/static/polyfill/polyfill-ie11.js"></script>
-    <script src="/static/app.nocache.js"></script>
+    <script src="/domino-ui-demo/polyfill/polyfill-ie11.js"></script>
+    <script src="/domino-ui-demo/app.nocache.js"></script>
 
     <script>
         ((window.gitter = {}).chat = {}).options = {
             room: 'domino-gwt/domino-ui'
         };
-
     </script>
     <script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
 </head>
