--- a/dominodo/index.html
+++ b/dominodo/index.html
@@ -13,6 +13,7 @@
     <!-- Consider inlining CSS to reduce the number of requested files -->
     <!--                                                               -->
 
+    <script src="app/polyfill/polyfill-ie11.js"></script>
     <link type="text/css" rel="stylesheet" href="./app/css/domino-ui.css">
     <link type="text/css" rel="stylesheet" href="app/css/themes/all-themes.css">
     <link type="text/css" rel="stylesheet" href="dominodo.css">
