--- a/domino-ui-demo/index.html
+++ b/domino-ui-demo/index.html
@@ -25,7 +25,23 @@
 </head>
 
 <body>
-
+<script type="text/javascript">
+	var urlString = window.location.href;
+	var url = new URL(urlString);
+	var urlToReplace = 'https://demo.dominokit.org';
+	var params = url.searchParams;	
+	if(params.toString().length > 0){
+		urlToReplace = urlToReplace + '?' + params;
+	}
+	
+	if(urlString.indexOf('#') > 0){
+		var hash = urlString.substring(urlString.indexOf('#')+1);
+		urlToReplace = urlToReplace + '/' + hash;
+	}
+	
+	document.location.replace(urlToReplace);
+   
+  </script>
 <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1'
         style="position:absolute;width:0;height:0;border:0"></iframe>
 
